# alfred

./: .alfredrc.example  .env.example  .gitallowed  .gitignore  .pennyworthrc.example  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  INSTALL.md  LICENSE  LICENSE-docs  MORNING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  deploy.sh  get.sh  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: audit.yml  bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  external-review-gate.yml  site.yml
.local/state/gh/: device-id
Casks/: alfred-os.rb
Formula/: alfred-os.rb
clients/desktop/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts
clients/desktop/e2e/: alfred-api.fixture.ts  alfred.contract.spec.ts
clients/desktop/scripts/: design-shots.mjs  enterprise-shots.mjs  onboarding-sweep.mjs  pixel-sweep.mjs  run-contract-tests.mjs
clients/desktop/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  index.css  types.ts
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
decisions/: 0002-surface-architecture-and-design-direction.md
docs/: AGENTS.md  AI_ASSISTED_INSTALL.md  ARCHITECT.md  ARCHITECTURE.md  ARCHITECTURE_RFC.md  ARCHITECT_PARENT_ISSUE_TEMPLATE.md  AWS_SETUP.md  BATMAN.md  BATTERIES.md  BENCHMARKS.md  CAPABILITIES.md  CHAT_RUNTIME_DECISION.md  CLAUDE_CODE.md  CLAUDE_PROXY.md  CLI.md  CODEX_PROVIDER.md  CODE_MEMORY.md  COMPRESSION.md  CONFIG.md  CONVERSATION.md  DEMO.md  DESIGN.md  DESIGN_SPEC.md  DESKTOP_CLIENT.md  DRY_RUN.md  ENGINE_ROUTING.md  FLEET_BRAIN.md  GLOSSARY.md  GOALS.md  IDENTITY_AND_THEMES.md  INDEX.md  INSTALL_TIERS.md  INSTALL_TIME.md  INTEGRATIONS.md  LINUX.md  MACOS_PERMISSIONS.md  MCP.md  MEMORY_PROVIDERS.md  MERGE_GATE.md  MONOREPO.md  (+29 more)
docs/benchmarks/: mem-ab-hard-real-v0.6.1.json  mem-ab-real-v0.6.0.json
examples/: agents.conf  connectors.yaml  slop-rules.json
examples/demo-repo/: README.md  test_textkit.py  textkit.py
examples/git-hooks/: pre-push
launchd/: agents.conf.example  render.sh
lib/: agent_capabilities.py  agent_roster.py  agent_runner.py  alfred_config.py  alfred_hooks.py  alfred_os_cli.py  architect_lifecycle.py  batman.py  batteries.py  benchmark.py  code_graph.py  compose_converse.py  compression_benchmark.py  compression_engine.py  conversation_condenser.py  converse_grounding.py  custom_agents.py  damian_planner.py  dependencies.py  envflags.py  goal_context.py  goals.py  headroom_engine.py  intake_profiles.py  issue_assignment.py  issue_queue.py  issue_summary.py  labels.py  lesson_statements.py  llm_retry.py  memory_benchmark.py  memory_extract.py  memory_judge.py  merge_gate.py  model_context.py  onboarding_converse.py  planning_actions.py  planning_assistant.py  proof_telemetry.py  roster_manifest.json  (+26 more)
lib/agent_runner/: __init__.py  agent_events.py  config.py  context_governor.py  engine_registry.py  github.py  lifecycle_doctor.py  memory_ranking.py  memory_runtime.py  notify.py  orchestrator.py  paths.py  pre_push.py  process.py  read_ledger.py  recovery.py  recovery_identity.py  reliability.py  repo_profile.py  result.py  rubric.py  skeleton_priming.py  skills_context.py  state.py  tool_digest.py
lib/connectors/: __init__.py
lib/demo/: __init__.py  orchestrator.py  presenter.py  sample_repo.py
lib/fleet_brain/: __init__.py  base.py  classify.py  config.py  consolidate.py  doctor.py  graph.py  promotion.py  reliability.py  schema.py  serialize.py  store.py  taxonomy.py
lib/memory/: __init__.py  ams_server.py  config.py  gbrain_stub.py  pgvector_provider.py  providers.py  redis_agent_memory.py  sqlite_hybrid.py
lib/server/: __init__.py  agent_profiles.py  app.py  firing_timeline.py  plan_approvals.py  reader.py  repo_discovery_worker.py  runtime_facade.py  schedule.py  setup.py  static_ui.py  streaming.py  usage.py  views.py
lib/server/routes/: __init__.py  agent_models.py  code_intelligence.py  conversation.py  converse.py  custom_agents.py  firings.py  health.py  memory.py  plans.py  roster.py  setup.py  slack.py  status.py  usage.py
lib/server/static/: style.css
lib/server/templates/: base.html  (+1 more)
lib/slack/: __init__.py  approval.py  bridge.py  control.py  converse.py  listener.py  memory.py  posting.py
lib/slack_surface/: __init__.py  approval.py  bridge.py  control.py  converse.py  dedup.py  intent.py  listener.py  memory.py  posting.py  threads.py
prompts/: bug-triage.md  code-review.md  cross-repo-coordinator.md  ecs-monitor.md  feature-dev.md  onboarding.md  planner.md  post-deploy-smoke.md  review-fix.md  spec-bundle-planner.md  spec-interrogator.md  test-coverage.md  theme-builder.md
site/: DESIGN.md  README.md  astro.config.mjs  package-lock.json  package.json
site/scripts/: build-impact-proof.mjs  build-product-proof.mjs  check-fonts.mjs  generate-og.mjs
skills/: NOTICE.md  packs.toml
systemd/: _template.service  render.sh
telemetry/worker/: README.md  wrangler.toml
tests/: conftest.py  test_agent_cleanup.py  test_agent_launch_interpreter.py  test_agent_profiles.py  test_agent_roster.py  test_agent_runner.py  test_alfred_architect_setup.py  test_alfred_batman_setup.py  test_alfred_brain.py  test_alfred_cli_batteries.py  test_alfred_cli_labels.py  test_alfred_cli_pr.py  test_alfred_cli_skills.py  test_alfred_demo.py  test_alfred_home_override.py  test_alfred_hooks.py  test_alfred_init.py  test_alfred_logs.py  test_alfred_mcp.py  test_alfred_nightly.py  test_alfred_schedule.py  test_alfred_serve_cli.py  test_alfred_setup_token.py  test_alfred_shipped_public.py  test_alfred_telemetry_cli.py  test_ams_infra.py  test_architect_lifecycle_bundle.py  test_architect_lifecycle_execute.py  test_architect_runner.py  test_audit_hardening.py  test_automerge_gate_mode.py  test_batman_bundle.py  test_batman_execute.py  test_batman_runner.py  test_batteries.py  test_batteries_serve.py  test_benchmark.py  test_claude_max_turns_default.py  test_claude_proxy_integration.py  test_code_graph.py  (+129 more)
(+262 files in other folders)
