[project]
# Project/distribution name stays "alfred-os" even though the GitHub repo is
# now luminik-io/alfred. Renaming the package would break `pip install
# alfred-os` and the `alfred_os_cli` import path for existing users; the repo
# URLs below already point at the new slug. Revisit the package rename as a
# deliberate, separately-versioned change, not as part of the repo-slug sweep.
name = "alfred-os"
version = "0.5.3"
description = "A small framework for running a fleet of narrow-specialist Claude Code and Codex agents on one host, isolated by git worktree."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "DataRavel Inc. (dba Luminik)" },
]
requires-python = ">=3.11"
keywords = ["claude-code", "codex", "agents", "launchd", "systemd", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "slack-sdk>=3.27",
  "boto3>=1.34",
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.27",
]

[project.scripts]
alfred-os = "alfred_os_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx2>=0.1",
  "ruff>=0.5",
  "mypy>=1.10",
]
# Optional dense-retrieval arm for the embedded SQLite hybrid memory store.
# Without it the store runs lexical-only (FTS5/BM25), the true zero-dependency
# default; installing it enables the sqlite-vec vector arm (still gated behind
# ALFRED_MEMORY_SQLITE_DENSE and a reachable embedder).
vector = [
  "sqlite-vec>=0.1",
]
[project.urls]
Homepage = "https://alfred.luminik.io"
Repository = "https://github.com/luminik-io/alfred"
Issues = "https://github.com/luminik-io/alfred/issues"
Changelog = "https://github.com/luminik-io/alfred/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lib"]
sources = ["lib"]

# Ship the curated skill-pack manifest and vendored skills alongside the lib
# modules so `alfred skills` works from an installed wheel, not just a source
# checkout. `sources = ["lib"]` puts lib content at the wheel root, so mapping
# `skills` -> `skills` lands it as a sibling of `skill_packs.py`.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"
# Ship the `alfred demo` sample repo alongside lib/demo so the installed
# `alfred demo` command finds it. `sources = ["lib"]` flattens `lib/demo` to
# `demo` at the wheel root, so mapping the sample under `demo/examples/demo-repo`
# lands it as a sibling tree of `sample_repo.py`.
"examples/demo-repo" = "demo/examples/demo-repo"

[tool.hatch.build.targets.sdist]
exclude = [
  "/site/node_modules",
  "/site/dist",
  "/site/.astro",
  "/.venv",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "**/__pycache__",
  "*.py[cod]",
]

# --------------------------------------------------------------------------
# ruff — linting + formatting
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "site/",                # Astro project; eslint/prettier-territory
  "examples/bin/hello.py", # intentionally minimal example
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length — handled by `line-length` and rare cases need long URLs
  "B008",  # function call in default arg — common in agent_runner for STATE_ROOT defaults
  "SIM108", # ternary suggestions — sometimes if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]   # asserting on tuples in tests is fine
"examples/**" = ["F401"] # imports for documentation purposes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------------
# mypy — type checking (lenient on lib, strict on new code)
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
# Excluded from type checking:
# - lib/server/: FastAPI route layer is still migrating to strict typing.
# - tests/, bin/, examples/: repo checks type the library surface and cover
#   runner scripts through pytest.
exclude = ["^lib/server/", "^tests/", "^bin/", "^examples/"]

[[tool.mypy.overrides]]
# agent_runner.py predates strict typing; opt in incrementally.
module = "agent_runner"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional dense-retrieval extension (pip install "alfred-os[vector]"). It is
# not a hard dependency and ships no type stubs, so the SQLite hybrid provider's
# import-guarded uses must not error whether or not it is installed.
module = "sqlite_vec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Optional tiktoken tokenizer used by the compression benchmark. Not a hard
# dependency and it ships no type stubs, so its import-guarded use must not error
# whether or not it is installed. (The headroom engine itself needs no override:
# headroom-ai is imported dynamically in lib/headroom_engine.py, so mypy never
# sees a static ``import headroom``.)
module = "tiktoken"
ignore_missing_imports = true

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:dateutil.*",
  # Python 3.13 surfaces sqlite3.Connection garbage-collection warnings
  # as PytestUnraisableExceptionWarning. These fire when tests open
  # short-lived in-memory or tmp-dir SQLite connections (e.g. fleet-brain)
  # and let them be GC'd implicitly. The connection close itself is
  # harmless; the warning is a 3.13 stdlib quirk. Ignoring so the suite
  # passes on 3.13 without forcing every test to manage close() explicitly.
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
[[tool.mypy.overrides]]
# Optional brain integration — modules live in the operator's private
# fleet, not in alfred-os. The agent_runner functions that import these
# are guarded by _shared_agent_available() and degrade silently when the
# brain isn't mounted. Tell mypy to ignore the missing imports.
module = ["memory_reflect", "recall", "guardrail", "context_budget", "event_stream"]
ignore_missing_imports = true
